# SnakeEyePlayerCore

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
package_install_shell/: ffmepg_install.sh
src/: CMakeLists.txt
src/avcore/: CMakeLists.txt  avcore.h  avcore_basic.cpp  avcore_info.cpp  avcore_pipeline.cpp  avcore_play.cpp  main.cpp
src/context/: CMakeLists.txt  format_context.cpp  format_context.hpp  packet_transfer_context.hpp  stream_context.hpp  transformer_context.hpp
src/element/: CMakeLists.txt  clock.h  clock.hpp  format_info.cpp  format_info.h  format_info.hpp  play_frame.h  play_frame.hpp  stream_info.cpp  stream_info.h  stream_info.hpp
src/id_generator/: CMakeLists.txt  data_queue_id_generator.hpp  format_id_genetator.hpp  stream_id_generator.hpp
src/manager/: CMakeLists.txt  codec_context_manager.cpp  codec_context_manager.h  data_manager.cpp  data_manager.hpp  format_context_manager.cpp  format_context_manager.hpp  format_packet_transfer_manager.cpp  format_packet_transfer_manager.hpp  info_manager.hpp  play_manager.cpp  play_manager.hpp  thread_manager.hpp  transformer_manager.cpp  transformer_manager.hpp
src/parser/: CMakeLists.txt  codec_parser.cpp  codec_parser.h  codec_parser.hpp
src/pipeline/: CMakeLists.txt  abstract_builder.hpp  pipeline.hpp
src/queue/: CMakeLists.txt  data_queue.cpp  data_queue.hpp  format_packet_queue.cpp  format_packet_queue.hpp  play_frame_queue.cpp  play_frame_queue.hpp  stream_frame_queue.cpp  stream_frame_queue.hpp  stream_packet_queue.cpp  stream_packet_queue.hpp
src/static/: CMakeLists.txt  macro.hpp  marco.hpp
src/task/: CMakeLists.txt  base_task.hpp  decode_task.hpp  encode_task.cpp  encode_task.hpp  read_task.cpp  read_task.hpp  read_transfer_task.cpp  read_transfer_task.hpp  transform_task.cpp  transform_task.hpp  write_task.cpp  write_task.hpp  write_transfer_task.cpp  write_transfer_task.hpp
src/thread/: CMakeLists.txt  base_thread.hpp  decode_thread.hpp  read_transfer_thread.hpp  write_transfer_thread.hpp
src/thread/task/: base_task.hpp  decode_task.cpp  decode_task.hpp  encode_task.cpp  encode_task.hpp  read_task.cpp  read_task.hpp  read_transfer_task.cpp  read_transfer_task.hpp  transform_task.cpp  transform_task.hpp  write_task.cpp  write_task.hpp  write_transfer_task.cpp  write_transfer_task.hpp
src/thread/thread/: base_thread.cpp  base_thread.hpp  decode_thread.hpp  encode_thread.hpp  read_thread.hpp  read_transfer_thread.hpp  transform_thread.hpp  write_thread.hpp  write_transfer_thread.hpp
src/transformer/: CMakeLists.txt  audio_resampler.cpp  audio_resampler.hpp  transformer.hpp  video_scaler.cpp  video_scaler.hpp
src/util/: CMakeLists.txt  data_alloc.cpp  dump_info.cpp  err.cpp  get_param.cpp  list.cpp  osff_macro.h  parse.cpp  read_dir.cpp  read_dir.h  read_dir.hpp  time_op.cpp  util.h  util.hpp  utils.cpp  utils.h  utils.hpp
