set(SNAKE_EYE_STATIC_SUBMODULE static)
project(se_${SNAKE_EYE_STATIC_SUBMODULE})

set(${SNAKE_EYE_STATIC_SUBMODULE}_HEADER_FILES
    macro.hpp
    )

add_library(${PROJECT_NAME} STATIC
    ${${SNAKE_EYE_STATIC_SUBMODULE}_HEADER_FILES}
    )
add_library(se::${SNAKE_EYE_STATIC_SUBMODULE} ALIAS ${PROJECT_NAME})

install(FILES ${${SNAKE_EYE_STATIC_SUBMODULE}_HEADER_FILES}
    DESTINATION include/se/${SNAKE_EYE_STATIC_SUBMODULE})
